--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Learning Github</title>
+        <title>Learning GitHub</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="_css/main.css">
@@ -23,7 +23,7 @@
     <footer>
     </footer>
         <script>
-//use the modernizr load to load up external scripts. This will load the scripts asynchronously, but the order listed matters. Although it will load all scripts in parallel, it will execute them in the order listed
+//changing this to follow along on training course. load up external scripts. This will load the scripts asynchronously, but the order listed matters. Although it will load all scripts in parallel, it will execute them in the order listed
 Modernizr.load([
 {
     load: [  
